# xil-research-modification

./: .gitignore  LICENSE  README.md  pyproject.toml
capsule-code/code/Fashion_MNIST/: pyproject.toml
capsule-code/code/Fashion_MNIST/caipi/: caipi-draw-weights.py  caipi-draw.py  caipi.py  prepare-newsgroups.py  prepare-reviews.py  versus-rrr.py
capsule-code/code/Fashion_MNIST/caipi/caipi/: image.py  learners.py  problem.py  tabular.py  text.py  utils.py
capsule-code/code/Fashion_MNIST/caipi/rrr/: README.md
capsule-code/code/Fashion_MNIST/caipi/rrr/experiments/: figure_grid.py  word_table.py
capsule-code/code/Fashion_MNIST/caipi/rrr/rrr/: decoy_mnist.py  iris_cancer.py  local_linear_explanation.py  multilayer_perceptron.py  tensorflow_perceptron.py  toy_colors.py
capsule-data/: .gitignore  README.md
doc/: TODO.md  disassemble_of_paper.md  flow.md  singularity_doc.md  zadani_projektu.md
src/: .gitignore  caipi.py  guided_backprop.py  masked_dropout.py  multilayer_perceptron.py  pyproject.toml  rrr_dataset.py  rrr_loss.py  utils.py
src/experiments/: 08_MNIST.ipynb  Caipi.ipynb  caipi_grid_search.py  cnn.py  matplotlib.ipynb  playground.ipynb  pytorch.ipynb
src/experiments/08_MNIST_output/: exp_01.md  exp_02.5_.md  exp_02.5_weights.pth  exp_02_weights.pth  exp_03_poor_ADAM_.md  model_confounded.pth
src/xil-research-modification/: caipi.py  utils.py
src/xil-research-modification/experiments/: caipi_grid_search.py  pytorch.ipynb
src/xil-research-modification/experiments/08_MNIST_output/: exp_03_poor_ADAM_weights.pth
src/xil_research_modification/: .gitignore  CustomBatchSampler.py  caipi.py  guided_backprop.py  rrr_loss.py  training_logger.py  utils.py
src/xil_research_modification/experiments/: 08_MNIST.ipynb  CONFIG-EXAMPLE.yaml  caipi_grid_search.py  cnn.py  config.yaml  config_lagrange.yaml  creating_misleading_dataset.ipynb  debugging_notebook.ipynb  lagrange_constraint_optimisation.py  lagrange_results.ipynb  playground.ipynb  run_caipi_grid_search.sh  run_caipi_lagrange.sh
src/xil_research_modification/experiments/08_MNIST_output/: exp_01weights.pth  exp_02_.md  model_confounded.pth
src/xil_research_modification/experiments/CAIPI_improved/: caipi_experiment.py  config_caipi_balanced.yaml  config_caipi_imbalanced.yaml  config_caipi_imbalanced_baseline.yaml  config_caipi_lagrange.yaml  visualise_explanations.ipynb
src/xil_research_modification/experiments/RRR_improved/: 08MNIST  config_rrr.yaml  config_rrr_baseline.yaml  rrr_experiment.py
src/xil_research_modification/experiments/baseline_balanced/: README.md  baseline_config.yaml  baseline_graphs.ipynb  baseline_loss_experiment.py  model_confounded.pth
tmp/: Fashion_MNIST.txt  Fashion_MNIST_imports.txt  (+9 more)
(+70 files in other folders)
