[tool.poetry]
name = "xil-research-modification"
version = "0.1.0"
description = ""
authors = ["Vladyslav Zlochevskyi <zlochvla@fel.cvut.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.4.0"
torch = "^2.4.0"
torchvision = "^0.19.0"
scipy = "^1.14.1"
autograd = "1.1.7"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
numpy = "^2.1.1"
scikit-image = "^0.24.0"
scikit-learn = "^1.5.1"
seaborn = "0.9.0"
setproctitle = "1.1.10"
spectral = "0.19"
tensorboardx = "1.6"
tqdm = "4.43.0"
xlrd = "1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
