[tool.poetry]
name = "right for the right reasons (rrr) mlp"
version = "0.1.0"
description = "Multilayer Perceptron with RRR loss"
authors = ["Vladyslav Zlochevskyi <zlochvla@fel.cvut.cz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
torch = "^2.5.1"
numpy = "2.0.2"
torchvision = "^0.20.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
